--- a/TccAliare/TccAliare.csproj
+++ b/TccAliare/TccAliare.csproj
@@ -37,15 +37,15 @@
   <ItemGroup>
     <Reference Include="FastReport, Version=2022.1.9.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\DIVERSOS\OneDrive\OneDrive - SIAGRI SISTEMAS DE GESTAO LTDA\Área de Trabalho\PROJETOS\FASTREPORT\FastReport.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\FastReport.dll</HintPath>
     </Reference>
     <Reference Include="FastReport.Bars, Version=2022.1.9.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\DIVERSOS\OneDrive\OneDrive - SIAGRI SISTEMAS DE GESTAO LTDA\Área de Trabalho\PROJETOS\FASTREPORT\FastReport.Bars.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\FastReport.Bars.dll</HintPath>
     </Reference>
     <Reference Include="FastReport.Editor, Version=2022.1.9.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\DIVERSOS\OneDrive\OneDrive - SIAGRI SISTEMAS DE GESTAO LTDA\Área de Trabalho\PROJETOS\FASTREPORT\FastReport.Editor.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\FastReport.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.1\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
