--- a/Aliare.DataBase/packages.config
+++ b/Aliare.DataBase/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FastReport.Compat" version="2021.3.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Data.SqlClient" version="2.0.0" targetFramework="net48" />
